--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <h1>Character name</h1>
   </header>
 
-  
+  <div class="accordion">
+    <input type="checkbox" id="section1">
+    <label for="section1">Section 1</label>
+    <div class="content">
+      <p>This is the content of Section 1.</p>
+    </div>
+
+    <input type="checkbox" id="section2">
+    <label for="section2">Section 2</label>
+    <div class="content">
+      <p>This is the content of Section 2.</p>
+    </div>
+  </div>
 
 
 </body>
