update to main page

--- a/index.html
+++ b/index.html
@@ -4,26 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Character name</title>
+  <title>rozm05 - my favorite characters</title>
 </head>
 <body>
   <header class="sticky-header">
-    <h1>Character name</h1>
+    <h1>My favorite characters in Genshin Impact</h1>
   </header>
 
-  <div class="accordion">
-    <input type="checkbox" id="section1">
-    <label for="section1">Section 1</label>
-    <div class="content">
-      <p>This is the content of Section 1.</p>
-    </div>
-
-    <input type="checkbox" id="section2">
-    <label for="section2">Section 2</label>
-    <div class="content">
-      <p>This is the content of Section 2.</p>
-    </div>
-  </div>
 
 
 </body>
