--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <h1>My favorite characters in Genshin Impact</h1>
   </header>
 
-
+  <div class="btn-group">
+    <button>Raiden Shogun</button>
+    <button>Nahida</button>
+    <button>Furina</button>
+    <button>Yae Miko</button>
+  </div>
 
 </body>
 </html>
