--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </header>
 
   <div class="btn-group">
-    <button>Raiden Shogun</button>
-    <button>Nahida</button>
-    <button>Furina</button>
-    <button>Yae Miko</button>
+    <button style="width: 25%;" id="raiden">Raiden Shogun</button>
+    <button style="width: 25%;" id="nahida">Nahida</button>
+    <button style="width: 25%;" id="furina">Furina</button>
+    <button style="width: 25%;" id="miko">Yae Miko</button>
   </div>
 
 </body>
