--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
   </header>
 
   <div class="btn-group">
-    <button style="width: 25%;" id="raiden">Raiden Shogun</button>
-    <button style="width: 25%;" id="nahida">Nahida</button>
-    <button style="width: 25%;" id="furina">Furina</button>
-    <button style="width: 25%;" id="miko">Yae Miko</button>
+    <button style="width: 25%;">
+      <img src="raiden.png" alt="Raiden Shogun splash art" style="width: 100%;"/>
+    </button>
+    <button style="width: 25%;">
+      <img src="nahida.png" alt="Nahida splash art" style="width: 100%"/>
+    </button>
+    <button style="width: 25%;">
+      <img src="furina.png" alt="Furina splash art" style="width: 100%;"/>
+    </button>
+    <button style="width: 25%;">
+      <img src="miko.png" alt="Yae Miko splash art" style="width: 100%;"/>
+    </button>
   </div>
 
 </body>
