added pages and updated buttons

--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
 </head>
 <body>
   <header class="sticky-header">
-    <h1>My favorite characters in Genshin Impact</h1>
+    <h1>My Favorite Characters in Genshin Impact</h1>
   </header>
 
   <div class="btn-group">
-    <button style="width: 25%;">
-      <img src="raiden.png" alt="Raiden Shogun splash art" style="width: 100%;"/>
-    </button>
-    <button style="width: 25%;">
-      <img src="nahida.png" alt="Nahida splash art" style="width: 100%"/>
-    </button>
-    <button style="width: 25%;">
-      <img src="furina.png" alt="Furina splash art" style="width: 100%;"/>
-    </button>
-    <button style="width: 25%;">
-      <img src="miko.png" alt="Yae Miko splash art" style="width: 100%;"/>
-    </button>
+    <a title="Raiden Shogun" href="raiden.html" style="width: 25%;">
+      <img class="transparent" src="raiden.png" alt="Raiden Shogun splash art" style="width: 100%;"/>
+      <span class="overlay-text">Raiden Shogun</span>
+    </a>
+    <a title="Nahida" href="nahida.html" style="width: 25%;">
+      <img class="transparent" src="nahida.png" alt="Nahida splash art" style="width: 100%"/>
+      <span class="overlay-text">Nahida</span>
+    </a>
+    <a title="Furina" href="furina.html" style="width: 25%;">
+      <img class="transparent" src="furina.png" alt="Furina splash art" style="width: 100%;"/>
+      <span class="overlay-text">Furina</span>
+    </a>
+    <a title="Yae Miko" href="miko.html" style="width: 25%;">
+      <img class="transparent" src="miko.png" alt="Yae Miko splash art" style="width: 100%;"/>
+      <span class="overlay-text">Yae Miko</span>
+    </a>
   </div>
 
 </body>
