added content and updated design

--- a/index.html
+++ b/index.html
@@ -30,5 +30,33 @@
     </a>
   </div>
 
+  <section>
+    <h2>What is Genshin Impact?</h2>
+    <p class="main-text">
+      Genshin Impact is an action role-playing game developed by HoYoverse, a Chinese video game development and publishing company.
+      It is an open-world game that is fully free to play and is monetized through gatcha game mechanics.<br>
+
+      The player sees the world of Teyvat through the eyes of the main character, the Traveller. At the start of the game, the Traveller and their sibling arrive to Teyvat (the game's world) and during a fight with an unknown god the Traveller's sibling is taken away.
+      Now the Traveller must travel across the whole Teyvat to find answers and covers other truths.<br>
+      The game is periodically updated every six weeks and each year the developers add a new region. 
+      This year they added the fifth region, Fontaine, which is loosely based on France. The developers hint at real life situations, places and/or people through out the game.<br>
+
+      The available regions and their real life inspirations are the following:
+      <ul>
+        <li>Mondstadt (Germany)</li>
+        <li>Liyue (China)</li>
+        <li>Inazuma (Japan)</li>
+        <li>Sumeru (ancient Egypt, India, Persia, and Mesopotamia)</li>
+        <li>Fontaine (1910s France)</li>
+      </ul>
+    </p>
+  </section>
+
+  <section>
+    This video shows the journey ahead of new players. Each region is teased with a generic summary of what is to come. <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/TAlKhARUcoY" frameborder="0" allowfullscreen></iframe>
+  </section>
+
+  <div class="extra-space"></div>
 </body>
 </html>
