--- a/raiden.html
+++ b/raiden.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="r-style.css">
   <title>rozm05 - Raiden Shogun</title>
 </head>
 <body>
@@ -11,5 +11,8 @@
     <h1>Raiden Shogun</h1>
   </header>
 
+  <section>
+    
+  </section>
 </body>
 </html>
