iframe doesnt like me

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
   <section>
     This video shows the journey ahead of new players. Each region is teased with a generic summary of what is to come. <br>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TAlKhARUcoY" frameborder="0" allowfullscreen></iframe>
+    </div>
   </section>
-  <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/TAlKhARUcoY" frameborder="0" allowfullscreen></iframe>
-  </div>
 
   <div class="extra-space"></div>
 </body>
