finishing raiden page, adding nahida page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
     </div>
   </section>
 
+  <section>
+    <footer>
+      <p>&copy; 2023 rozm05. All rights reserved.</p>
+    </footer>
+  </section>
+
   <div class="extra-space"></div>
+
 </body>
 </html>
