--- a/nahida.html
+++ b/nahida.html
@@ -3,13 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="n-style.css">
   <title>rozm05 - Nahida</title>
 </head>
 <body>
+  <header class="homepage-header">
+    <a href="index.html">
+      <h1>My Favorite Characters in Genshin Impact</h1>
+    </a>
+  </header>
   <header class="sticky-header">
     <h1>Nahida</h1>
   </header>
+
+  <nav>
+    <a href="raiden.html">Raiden Shogun</a>
+    <a href="furina.html">Furina</a>
+    <a href="miko.html">Yae Miko</a>
+  </nav>
+
+  <section>
+    <img src="Nahida_Card.webp" alt="Nahida character card" style="width: 25%"><br>
+    Nahida is a playable character in Genshin Impact, also known as Lesser Lord Kusanali. She is the Dendro Archon of Sumeru and god of Wisdom.
+  </section>
+  <div class="section-container">
+    <h2>Abilities</h2>
+    <section class="text-columns">
+      <p>
+          Nahida's elemental skill, All Schemes to Know, binds her enemies and marks them with the Seed of Skandha. Triggering elemental reactions 
+          on a marked enemy unleashes Tri-Karma Purification on all marked enemies.
+      </p>
+      <p>
+        <img src="All_Schemes_to_Know_Hold_Preview.webp" alt="Animation of Nahida's Elemental skill" style="width: 100%;"/>
+      </p>
+    </section>
+    <section class="text-columns">
+      <p>
+        <img src="Illusory_Heart_Preview.webp" alt="Animation of Nahida's Ultimate ability" style="width: 100%;"/>
+      </p>
+      <p>
+        When using her ultimate ability, Illusory Heart, Nahida spawns the Shrine of Maya. The Shrine buffs all allies based on the Elemental Types
+        present within the party.
+      </p>
+    </section>
+  </div>
+
+  <section>
+    <footer>
+      <p>&copy; 2023 rozm05. All rights reserved.</p>
+    </footer>
+  </section>
+
+  <div class="extra-space"></div>
 
 </body>
 </html>
