--- a/raiden.html
+++ b/raiden.html
@@ -7,12 +7,53 @@
   <title>rozm05 - Raiden Shogun</title>
 </head>
 <body>
+  <header class="homepage-header">
+    <a href="index.html">
+      <h1>My Favorite Characters in Genshin Impact</h1>
+    </a>
+  </header>
   <header class="sticky-header">
     <h1>Raiden Shogun</h1>
   </header>
 
+  <nav>
+    <a href="nahida.html">Nahida</a>
+    <a href="furina.html">Furina</a>
+    <a href="miko.html">Yae Miko</a>
+  </nav>
+
   <section>
-    
+    <img src="Raiden_Shogun_Card.webp" alt="Raiden Shogun character card" style="width: 25%"><br>
+    Raiden Shogun is one of the playable characters in Genshin Impact and is comprised of two beings in one body - the Raiden Shogun puppet and Ei.
+    Ei is the current Electro Archon of Inazuma and god of Eternity and the puppet was created by Ei to rule in her stead while she is meditating in her Plane of Euthymia.
   </section>
+  <div class="section-container">
+    <h2>Abilities</h2>
+    <section class="text-columns">
+      <p>
+          Raiden's elemental skill, Transcendence Baleful Omen, deals a small amount of damage and creates the Eye of Stormy Judgement.
+      </p>
+      <p>
+        <img src="Transcendence_Baleful_Omen_Preview.webp" alt="Animation of Raiden's Elemental skill" style="width: 100%;"/>
+      </p>
+    </section>
+    <section class="text-columns">
+      <p>
+        <img src="Secret_Art_Musou_Shinsetsu_Preview.webp" alt="Animation of Raiden's Ultimate ability" style="width: 100%;"/>
+      </p>
+      <p>
+        The Secret Art Musou Shinsetsu is Raiden's ultimate ability. After a single big strike, Raiden's normal attacks and charged attacks are empowered.
+      </p>
+    </section>
+  </div>
+
+  <section>
+    <footer>
+      <p>&copy; 2023 rozm05. All rights reserved.</p>
+    </footer>
+  </section>
+
+  <div class="extra-space"></div>
+
 </body>
 </html>
