adding furina and miko pages

--- a/furina.html
+++ b/furina.html
@@ -3,13 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="f-style.css">
   <title>rozm05 - Furina</title>
 </head>
 <body>
+  <header class="homepage-header">
+    <a href="index.html">
+      <h1>My Favorite Characters in Genshin Impact</h1>
+    </a>
+  </header>
   <header class="sticky-header">
     <h1>Furina</h1>
   </header>
+
+  <nav>
+    <a href="raiden.html">Raiden Shogun</a>
+    <a href="nahida.html">Nahida</a>
+    <a href="miko.html">Yae Miko</a>
+  </nav>
+
+  <section>
+    <img src="Furina_Card.webp" alt="Furina character card" style="width: 25%"><br>
+    Furina is a playable character in Genshin Impact and is the Hydro Archon of Fontaine and the god of Justice. She enjoys theatre and trials.
+  </section>
+  <div class="section-container">
+    <h2>Abilities</h2>
+    <section class="text-columns">
+      <p>
+          Furina's elemental skill has two different versions based on what state she is in - Pneuma or Ousia. Using the skill Salon Solitaire 
+          summons guests to assist Furina. <br> While in Ousia state, Furina summons three Salon members, Gentilhomme Usher, Surintendante Chevalmarin and Mademoiselle Crabaletta.
+          They attack enemies, which the player attacks. <br> In Pneuma state, Furina summons the Singer of Many Waters, who peridiocally heals the active character.
+      </p>
+      <p>
+        <img src="Salon_Solitaire_Ousia_Preview.webp" alt="Animation of Furina's Elemental skill in Ousia state" style="width: 100%;"/>
+        <img src="Salon_Solitaire_Pneuma_Preview.webp" alt="Animation of Furina's Elemental skill in Pneuma state" style="width: 100%;">
+      </p>
+    </section>
+    <section class="text-columns">
+      <p>
+        <img src="Let_the_People_Rejoice_Ousia_Preview.webp" alt="Animation of Furina's Ultimate ability" style="width: 100%;"/>
+      </p>
+      <p>
+        When unleashing her ultimate ability, Let the People Rejoice, Furina empowers the whole team based on the change of HP.  
+      </p>
+    </section>
+  </div>
+
+  <section>
+    <footer>
+      <p>&copy; 2023 rozm05. All rights reserved.</p>
+    </footer>
+  </section>
+
+  <div class="extra-space"></div>
 
 </body>
 </html>
