--- a/miko.html
+++ b/miko.html
@@ -3,13 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="m-style.css">
   <title>rozm05 - Yae Miko</title>
 </head>
 <body>
+  <header class="homepage-header">
+    <a href="index.html">
+      <h1>My Favorite Characters in Genshin Impact</h1>
+    </a>
+  </header>
   <header class="sticky-header">
     <h1>Yae Miko</h1>
   </header>
+
+  <nav>
+    <a href="raiden.html">Raiden Shogun</a>
+    <a href="furina.html">Furina</a>
+    <a href="nahida.html">Nahida</a>
+  </nav>
+
+  <section>
+    <img src="Yae_Miko_Card.webp" alt="Yae Miko's character card" style="width: 25%"><br>
+    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+  </section>
+  <div class="section-container">
+    <h2>Abilities</h2>
+    <section class="text-columns">
+      <p>
+          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+      </p>
+      <p>
+        <img src="Yakan_Evocation_Sesshou_Sakura_Press_Preview.webp" alt="Animation of Yae Miko's Elemental skill" style="width: 100%;"/>
+      </p>
+    </section>
+    <section class="text-columns">
+      <p>
+        <img src="Great_Secret_Art_Tenko_Kenshin_Preview.webp" alt="Animation of Yae Miko's Ultimate ability" style="width: 100%;"/>
+      </p>
+      <p>
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  
+      </p>
+    </section>
+  </div>
+
+  <section>
+    <footer>
+      <p>&copy; 2023 rozm05. All rights reserved.</p>
+    </footer>
+  </section>
+
+  <div class="extra-space"></div>
 
 </body>
 </html>
