--- a/miko.html
+++ b/miko.html
@@ -24,13 +24,13 @@
 
   <section>
     <img src="Yae_Miko_Card.webp" alt="Yae Miko's character card" style="width: 25%"><br>
-    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    Yae Miko is one of many playable characters in Genshin Impact. She is known as Guuji Yae, the head of the Grand Narukami Shrine.
   </section>
   <div class="section-container">
     <h2>Abilities</h2>
     <section class="text-columns">
       <p>
-          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+          Yae Miko spawns Sesshou Sakura when using her skill. Sesshou Sakuras are totems that strike nearby enemies.
       </p>
       <p>
         <img src="Yakan_Evocation_Sesshou_Sakura_Press_Preview.webp" alt="Animation of Yae Miko's Elemental skill" style="width: 100%;"/>
@@ -41,7 +41,7 @@
         <img src="Great_Secret_Art_Tenko_Kenshin_Preview.webp" alt="Animation of Yae Miko's Ultimate ability" style="width: 100%;"/>
       </p>
       <p>
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  
+        When ulting, Yae Miko summons a lightning strike. Every Sesshou Sakura that is spawned will turn to additional bolts striking enemies. 
       </p>
     </section>
   </div>
