--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="icons8-star-48.png" type="image/x-icon">
   <title>rozm05 - my favorite characters</title>
 </head>
 <body>
