--- a/raiden.html
+++ b/raiden.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="r-style.css">
+  <link rel="icon" href="icons8-star-48.png" type="image/x-icon">
   <title>rozm05 - Raiden Shogun</title>
 </head>
 <body>
