adding home button

--- a/miko.html
+++ b/miko.html
@@ -18,9 +18,10 @@
   </header>
 
   <nav>
+    <a href="index.html">Home</a>
     <a href="raiden.html">Raiden Shogun</a>
-    <a href="furina.html">Furina</a>
     <a href="nahida.html">Nahida</a>
+    <a href="furina.html">Furina</a>
   </nav>
 
   <section>
