--- a/furina.html
+++ b/furina.html
@@ -18,6 +18,7 @@
   </header>
 
   <nav>
+    <a href="index.html">Home</a>
     <a href="raiden.html">Raiden Shogun</a>
     <a href="nahida.html">Nahida</a>
     <a href="miko.html">Yae Miko</a>
