--- a/nahida.html
+++ b/nahida.html
@@ -18,6 +18,7 @@
   </header>
 
   <nav>
+    <a href="index.html">Home</a>
     <a href="raiden.html">Raiden Shogun</a>
     <a href="furina.html">Furina</a>
     <a href="miko.html">Yae Miko</a>
