--- a/raiden.html
+++ b/raiden.html
@@ -18,6 +18,7 @@
   </header>
 
   <nav>
+    <a href="index.html">Home</a>
     <a href="nahida.html">Nahida</a>
     <a href="furina.html">Furina</a>
     <a href="miko.html">Yae Miko</a>
