--- a/pexeso.html
+++ b/pexeso.html
@@ -10,6 +10,6 @@
 <body>
     <div id="game-container"></div>
 
-    <script src="script.js"></script>
+    <script src="pexeso.js"></script>
 </body>
 </html>
