--- a/pexeso.html
+++ b/pexeso.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>-->
     <link rel="stylesheet" href="pexeso-style.css">
     <title>Pexeso</title>
 </head>
 <body>
+    <header class="homepage-header">
+        <h1>PEXESO</h1>
+    </header>
+
+    <button id="reset-btn">Nová hra</button>
+
     <div id="game-container"></div>
 
     <script src="pexeso.js"></script>
